# hf-inference-platform

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: benchmark-matrix.example.json
docs/: architecture.md  audit-playbook.md  optimization-guide.md
scripts/: benchmark.py
src/hf_inference_platform/: backends.py  config.py  hf_backends.py  main.py  platform.py  runtime.py  schemas.py  service.py
src/hf_inference_sdk/: __init__.py  client.py
tests/: test_backends.py  test_config.py  test_platform.py  test_sdk.py  test_service.py
